# rustss

./: Cargo.toml
.github/workflows/: ci.yml
src/: lib.rs  main.rs
templates/: index.html
