[package]
name = "rustss"
version = "0.1.0"
edition = "2021"
default-run = "rustss"

[[bin]]
name = "rustss"

[[bin]]
name = "rustss-cli"
path = "src/bin/cli.rs"

[dependencies]
anyhow = "1.0.95"
feed-rs = "2.3.1"
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
axum = "0.7"
askama = { version = "0.12", features = ["with-axum"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
askama_axum = "0.4.0"
